# epistemon

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  ROADMAP.md  TODO.md  demo.py  example.config.yaml  main.py  pyproject.toml  quick_demo.py
.beads/: README.md  issues.jsonl
epistemon/: __init__.py  cli.py  config.py  evaluation.py  instrumentation.py  llm_factory.py  logging_config.py  tracing.py  vector_store_factory.py
epistemon/indexing/: __init__.py  bm25_indexer.py  chunker.py  file_tracker.py  indexer.py  scanner.py  stopwords.txt  vector_store_factory.py  vector_store_manager.py
epistemon/rag/: rag_chain.py
epistemon/retrieval/: __init__.py  hybrid_retriever.py  rag_chain.py
epistemon/search/: __init__.py  searcher.py
epistemon/web/: __init__.py  app.py  shiny_app.py  shiny_ui.py
epistemon/web/static/: index.html
openspec/changes/online-rag-evaluation/: design.md  proposal.md  tasks.md
openspec/changes/online-rag-evaluation/specs/rag-evaluation/: spec.md
openspec/changes/online-rag-evaluation/specs/tracing/: spec.md
prompts/: default.txt  rag_answer_prompt.txt
tests/: test_bm25_indexer.py  test_cli.py  test_config.py  test_e2e.py  test_evaluation.py  test_hybrid_retriever.py  test_indexing.py  test_llm_factory.py  test_logging_config.py  test_rag_chain.py  test_search.py  test_shiny_app.py  test_shiny_ui.py  test_tracing.py  test_vector_store_manager.py  test_web.py
tests/data/: dangling_headline_test.md  doc1.md  doc2.md  large_section.md  malformed.md  markdown_structure.md  markdown_with_headers.md  sample.md
tests/data/subdir/: nested_doc.md
tests/data/subdir/nested/: deep_doc.md
