[project]
name = "epistemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.0",
    "fastapi>=0.128.0",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.5",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.6",
    "langchain-text-splitters>=1.1.0",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.2.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "playwright>=1.57.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "C4",  # flake8-comprehensions
    "I",   # isort
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert usage is expected in tests
]

[tool.mypy]
strict = true
disable_error_code = ["import-not-found"]

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "epistemon.web.*"
disable_error_code = ["misc"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests using headless browser (slow, run with -m e2e)",
]
addopts = "-m 'not e2e'"
